grammar.js
    program: ($) =>
      seq(
        repeat("\n"),
        optional(seq($.frontmatter, repeat("\n"))),
        optional($.pipeline),
      ),

    comment: (_) =>
      token(
        choice(
          seq("//", /[^\n\r]*/),
          seq("/*", /[^*]*\*+([^/*][^*]*\*+)*/, "/"),
        ),
      ),

    // Pipeline is a sequence of statements separated by newlines or pipes
    pipeline: ($) =>
      prec.left(
        seq(
          $.statement,
          repeat(prec.left(seq(repeat1(choice("\n", "|")), $.statement))),
          repeat(choice("\n", "|")),
        ),
      ),

    statement: ($) =>
      choice(
        $.let_statement,
        $.if_statement,
        $.match_statement,
        $.assignment,
        $.invocation,
      ),

    let_statement: ($) =>
      prec(
        2,
        seq(
          KEYWORD.LET,
          field("name", $.dollar_var),
          "=",
          field("value", $.expression),
        ),
      ),

    if_statement: ($) =>
      prec(
        2,
        seq(
          KEYWORD.IF,
          field("condition", $.expression),
          field("consequence", alias($.block, $.then_block)),
          optional(
            seq(
              KEYWORD.ELSE,
              field(
                "alternative",
                choice($.if_statement, alias($.block, $.else_block)),
              ),
            ),
          ),
        ),
      ),

    match_statement: ($) =>
      prec(
        2,
        seq(
          KEYWORD.MATCH,
          field("expr", $.expression),
          "{",
          repeat("\n"),
          repeat(seq($.match_arm, optional(","), repeat("\n"))),
          "}",
        ),
      ),

    match_arm: ($) =>
      seq(
        sep1_newline(field("patterns", $.match_pattern), "|"),
        optional(
          seq(
            KEYWORD.IF,
            field("guard", alias($.guard_expression, $.expression)),
          ),
        ),
        "=>",
        "{",
        repeat("\n"),
        field("body", optional($.pipeline)),
        "}",
      ),

    match_pattern: ($) =>
      choice($.wildcard_pattern, $.range_pattern, $.expression_pattern),

    wildcard_pattern: (_) => prec(1, BUILTIN._),

    expression_pattern: ($) => $.pattern_expression,

    range_pattern: ($) =>
      seq(
        field("lower", $.pattern_expression),
        "..",
        field("upper", $.pattern_expression),
      ),

    invocation: ($) =>
      seq(
        field("operator", $.entity),
        optional(
          field(
            "arguments",
            choice(alias($.parenthesized_arguments, $.arguments), $.arguments),
          ),
        ),
        optional(
          seq(
            $.pipeline_block,
            repeat(seq(",", repeat("\n"), $.pipeline_block)),
            optional(seq(",", repeat("\n"), field("arguments", $.arguments))),
          ),
        ),
      ),

    assignment: ($) =>
      prec.right(
        0,
        seq(
          field("left", choice($.selector, $.dollar_assignment_target)),
          "=",
          field("right", $.expression),
        ),
      ),

    assignment_expression: ($) =>
      prec.right(
        0,
        seq(field("left", $.expression), "=", field("right", $.expression)),
      ),

    // Newlines are trivia inside expression containers in the engine. Keep a
    // separate production so a bare newline still ends a statement.
    _expression_with_newlines: ($) =>
      choice($.expression, alias($.multiline_expression, $.expression)),

    selector: ($) => choice($.meta_selector, $.field_selector),

    // Meta selector - more flexible to allow any identifier after @
    meta_selector: ($) =>
      seq(field("sigil", alias("@", $.metadata_sigil)), $.identifier),

    field_selector: ($) =>
      choice(
        KEYWORD.THIS,
        seq(
          optional(seq(KEYWORD.THIS, ".")),
          $.identifier,
          optional("?"),
          repeat(seq(".", $.identifier, optional("?"))),
        ),
      ),

    entity: ($) =>
      seq(
        $.identifier,
        repeat(seq(alias($.module_separator, "::"), $.identifier)),
      ),

    arguments: ($) => commaSep1($.argument),

    argument: ($) =>
      choice(
        prec.dynamic(1, $.assignment), // Named argument: foo=bar
        $.expression,
      ),

    expression: ($) =>
      prec.left(
        choice(
          $.assignment_expression,
          $.binary_expression,
          $.unary_expression,
          $.member_expression,
          $.index_expression,
          $.call_expression,
          $.lambda_expression,
          $.primary_expression,
        ),
      ),

    // Match guards use parse_expression(min_prec=1) in the engine, which
    // excludes bare assignments and lambdas but permits parenthesized forms.
    pattern_expression: ($) =>
      prec.left(
        1,
        choice(
          $.pattern_binary_expression,
          $.unary_expression,
          $.member_expression,
          $.index_expression,
          $.call_expression,
          $.pattern_primary_expression,
        ),
      ),

    pattern_primary_expression: ($) =>
      prec(
        1,
        choice(
          $.literal,
          $.format_expr,
          $.identifier,
          $.dollar_var,
          $.qualified_dollar_var,
          $.meta_selector,
          KEYWORD.THIS,
          $.list,
          $.record,
          seq(
            "(",
            repeat("\n"),
            $._expression_with_newlines,
            repeat("\n"),
            ")",
          ),
        ),
      ),

    primary_expression: ($) =>
      choice(
        $.literal,
        $.format_expr,
        $.identifier,
        $.dollar_var,
        $.qualified_dollar_var,
        $.meta_selector,
        KEYWORD.THIS,
        BUILTIN._,
        $.list,
        $.record,
        seq("(", repeat("\n"), $._expression_with_newlines, repeat("\n"), ")"),
      ),

    literal: ($) =>
      choice(
        NULL_LITERAL,
        BOOLEAN.TRUE,
        BOOLEAN.FALSE,
        $.number,
        $.string,
        $.ip,
        $.subnet,
        $.time,
        $.duration,
      ),

    // Binary expressions - allow newlines after operators for continuation
    binary_expression: ($) =>
      choice(
        // Lowest precedence: else (precedence 1)
        prec.left(
          1,
          seq($.expression, KEYWORD.ELSE, repeat("\n"), $.expression),
        ),
        // if has precedence 2
        prec.left(2, seq($.expression, KEYWORD.IF, repeat("\n"), $.expression)),
        prec.left(3, seq($.expression, KEYWORD.OR, repeat("\n"), $.expression)),
        prec.left(
          4,
          seq($.expression, KEYWORD.AND, repeat("\n"), $.expression),
        ),
        prec.left(
          6,
          seq(
            $.expression,
            choice("==", "!=", ">", ">=", "<", "<=", KEYWORD.IN),
            repeat("\n"),
            $.expression,
          ),
        ),
        // 'not in' is handled specially - parsed as 'not (x in y)'
        prec.left(
          6,
          seq(
            $.expression,
            seq(KEYWORD.NOT, KEYWORD.IN),
            repeat("\n"),
            $.expression,
          ),
        ),
        prec.left(
          7,
          seq($.expression, choice("+", "-"), repeat("\n"), $.expression),
        ),
        prec.left(
          8,
          seq($.expression, choice("*", "/"), repeat("\n"), $.expression),
        ),
      ),

    // Unary operators
    unary_expression: ($) =>
      choice(
        prec(5, seq(choice(KEYWORD.NOT, KEYWORD.MOVE), $.expression)),
        prec(9, seq(choice("+", "-"), $.expression)),
      ),

    // Member access
    member_expression: ($) =>
      prec.left(
        11,
        choice(
          seq($.expression, ".", $.identifier, optional("?")),
          seq($.expression, ".?", $.identifier),
        ),
      ),

    // Index access
    call_expression: ($) =>
      choice(
        // Regular function call: foo()
        seq($.entity, "(", commaSep($.call_argument), repeat("\n"), ")"),
        // Method call (UFCS): a.b()
        prec(
          12,
          seq(
            field("receiver", $.expression),
            ".",
            field("method", $.entity),
            "(",
            commaSep($.call_argument),
            repeat("\n"),
            ")",
          ),
        ),
      ),

    // Arguments in function calls can be assignments or expressions
    call_argument: ($) =>
      seq(
        repeat("\n"),
        choice(
          prec.dynamic(1, $.assignment),
          prec.dynamic(1, alias($.multiline_assignment, $.assignment)),
          $._expression_with_newlines,
        ),
      ),

    lambda_expression: ($) =>
      prec.right(
        -1,
        seq(
          field("parameter", $.identifier),
          "=>",
          field("body", $.expression),
        ),
      ),

    list: ($) =>
      seq(
        "[",
        repeat("\n"),
        sep(
          choice($._expression_with_newlines, $.spread),
          seq(repeat("\n"), ",", repeat("\n")),
        ),
        optional(","),
        repeat("\n"),
        "]",
      ),

    record: ($) =>
      seq(
        "{",
        repeat("\n"),
        sep(
          choice($.record_field, $.spread),
          seq(repeat("\n"), ",", repeat("\n")),
        ),
        optional(","),
        repeat("\n"),
        "}",
      ),

    record_field: ($) =>
      seq(
        field("key", choice($.identifier, $.string)),
        ":",
        repeat("\n"),
        field("value", $._expression_with_newlines),
      ),

    identifier: ($) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    dollar_var: ($) =>
      seq(field("sigil", alias("$", $.global_sigil)), $.identifier),

    qualified_dollar_var: ($) =>
      seq(
        repeat1(
          seq(field("module", $.identifier), alias($.module_separator, "::")),
        ),
        field("name", $.dollar_var),
      ),

    number: ($) =>
      token(
        seq(
          /\d+(?:_\d+)*/,
          optional(seq(".", /\d+(?:_\d+)*/)),
          optional(seq(/[eE]/, optional(choice("+", "-")), /\d+(?:_\d+)*/)),
          optional(
            choice(
              "k",
              "M",
              "G",
              "T",
              "P",
              "E",
              "Ki",
              "Mi",
              "Gi",
              "Ti",
              "Pi",
              "Ei",
            ),
          ),
        ),
      ),

    string: ($) =>
      choice(
        token(seq(optional("b"), '"', repeat(choice(/[^"\\]/, /\\./)), '"')),
        token(seq(optional("b"), "'", repeat(choice(/[^'\\]/, /\\./)), "'")),
        token(rawStringRegex("r")),
        token(rawStringRegex("br")),
      ),

    metadata_sigil: (_) => "@",

    global_sigil: (_) => "$",
