test/corpus/assignments.txt
==================
Simple assignment
==================

a = b()

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (identifier)))
        (expression
          (call_expression
            (entity
              (identifier))))))))

==================
Assignment with function arguments
==================

a = b(c)

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (identifier)))
        (expression
          (call_expression
            (entity
              (identifier))
            (call_argument
              (expression
                (primary_expression
                  (identifier))))))))))

==================
Assignment with named argument
==================

a = b(c=d)

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (identifier)))
        (expression
          (call_expression
            (entity
              (identifier))
            (call_argument
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (identifier)))))))))))

==================
Assignment with mixed arguments
==================

a = b(c, d=e)

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (identifier)))
        (expression
          (call_expression
            (entity
              (identifier))
            (call_argument
              (expression
                (primary_expression
                  (identifier))))
            (call_argument
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (identifier)))))))))))

==================
Field path assignment
==================

foo.bar = 42

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (identifier)
            (identifier)))
        (expression
          (primary_expression
            (literal
              (number))))))))

==================
Meta selector assignment
==================

@name = "value"

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (meta_selector
            (metadata_sigil)
            (identifier)))
        (expression
          (primary_expression
            (literal
              (string))))))))

==================
Dollar variable assignment
==================

$into = $log
$into.start = amazon::$start

---

(program
  (pipeline
    (statement
      (assignment
        left: (selector
          (field_selector
            (dollar_var
              sigil: (global_sigil)
              (identifier))))
        right: (expression
          (primary_expression
            (dollar_var
              sigil: (global_sigil)
              (identifier))))))
    (statement
      (assignment
        left: (selector
          (field_selector
            (dollar_var
              sigil: (global_sigil)
              (identifier))
            (identifier)))
        right: (expression
          (primary_expression
            (qualified_dollar_var
              module: (identifier)
              name: (dollar_var
                sigil: (global_sigil)
                (identifier)))))))))

==================
Package operator assignment
==================

$into = $log.parse_ssv(
  header=amazon::$vpc_flow_v2_header,
  null_value="-",
)
$into.start = $into.start?.seconds().from_epoch()

---

(program
  (pipeline
    (statement
      (assignment
        (selector
          (field_selector
            (dollar_var
              (global_sigil)
              (identifier))))
        (expression
          (call_expression
            (expression
              (primary_expression
                (dollar_var
                  (global_sigil)
                  (identifier))))
            (entity
              (identifier))
            (call_argument
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (qualified_dollar_var
                      (identifier)
                      (dollar_var
                        (global_sigil)
                        (identifier)))))))
            (call_argument
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))))
    (statement
      (assignment
        (selector
          (field_selector
            (dollar_var
              (global_sigil)
              (identifier))
            (identifier)))
        (expression
          (call_expression
            (expression
              (call_expression
                (expression
                  (member_expression
                    (expression
                      (primary_expression
                        (dollar_var
                          (global_sigil)
                          (identifier))))
                    (identifier)))
                (entity
                  (identifier))))
            (entity
              (identifier))))))))

==================
Assignment in operator context
==================

foo a.b()

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (call_expression
                (expression
                  (primary_expression
                    (identifier)))
                (entity
                  (identifier))))))))))
