test/corpus/control_flow.txt
==================
Let statement
==================

let $foo = 42

---

(program
  (pipeline
    (statement
      (let_statement
        (dollar_var
          (global_sigil)
          (identifier))
        (expression
          (primary_expression
            (literal
              (number))))))))

==================
Multiple let statements
==================

let $foo = 42
let $bar = now()

---

(program
  (pipeline
    (statement
      (let_statement
        (dollar_var
          (global_sigil)
          (identifier))
        (expression
          (primary_expression
            (literal
              (number))))))
    (statement
      (let_statement
        (dollar_var
          (global_sigil)
          (identifier))
        (expression
          (call_expression
            (entity
              (identifier))))))))

==================
Let with dependency
==================

let $foo = 42
let $bar = $foo + 1

---

(program
  (pipeline
    (statement
      (let_statement
        (dollar_var
          (global_sigil)
          (identifier))
        (expression
          (primary_expression
            (literal
              (number))))))
    (statement
      (let_statement
        (dollar_var
          (global_sigil)
          (identifier))
        (expression
          (binary_expression
            (expression
              (primary_expression
                (dollar_var
                  (global_sigil)
                  (identifier))))
            (expression
              (primary_expression
                (literal
                  (number))))))))))

==================
Simple if statement
==================

if b == 42 {
  c d
  e f=g
}

---

(program
  (pipeline
    (statement
      (if_statement
        (expression
          (binary_expression
            (expression
              (primary_expression
                (identifier)))
            (expression
              (primary_expression
                (literal
                  (number))))))
        (then_block
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (expression
                      (primary_expression
                        (identifier)))))))
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (assignment
                      (selector
                        (field_selector
                          (identifier)))
                      (expression
                        (primary_expression
                          (identifier))))))))))))))

==================
If-else statement
==================

if i {} else {}

---

(program
  (pipeline
    (statement
      (if_statement
        (expression
          (primary_expression
            (identifier)))
        (then_block)
        (else_block)))))

==================
Match statement empty
==================

match k {}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))))))

==================
Match with single arm
==================

match k { "foo" => { bar } }

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))))))))))

==================
Match with multiple arms
==================

match k {
  "foo" => {
    bar
  }
  42 => {
    foo bar
    qux bar
  }
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))))))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))))
          (pipeline
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (expression
                      (primary_expression
                        (identifier)))))))
            (statement
              (invocation
                (entity
                  (identifier))
                (arguments
                  (argument
                    (expression
                      (primary_expression
                        (identifier)))))))))))))

==================
Match with alternatives
==================

match action {
  "accept" | "allow" => {
    verdict = "allowed"
  }
  "deny" | "drop" => {
    verdict = "blocked"
  }
  _ => {
    verdict = "unknown"
  }
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (string))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (wildcard_pattern))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))))))

==================
Match with guarded range alternatives
==================

match status {
  499..600 | 429 if retries > 0 => {
    action = "retry"
  }
  499..600 => {
    action = "page"
  }
  _ if status == 404 => {
    action = "not_found"
  }
  _ => {
    action = "ignore"
  }
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (range_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))))
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))))
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (identifier)))
              (expression
                (primary_expression
                  (literal
                    (number))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (range_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (wildcard_pattern))
          (expression
            (binary_expression
              (expression
                (primary_expression
                  (identifier)))
              (expression
                (primary_expression
                  (literal
                    (number))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (wildcard_pattern))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))))))

==================
Match with bare guard
==================

match x {
  1 if guard => {}
  _ => {}
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (literal
                    (number))))))
          (expression
            (primary_expression
              (identifier))))
        (match_arm
          (match_pattern
            (wildcard_pattern)))))))

==================
Match with negative and exact structured value patterns
==================

match value {
  -1 => {}
  ["prod", "checkout"] => {
    class = "checkout"
  },
  {action: "allow", port: 443} => {
    class = "allow web"
  }
  _ => {}
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (unary_expression
                  (expression
                    (primary_expression
                      (literal
                        (number)))))))))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (list
                    (expression
                      (primary_expression
                        (literal
                          (string))))
                    (expression
                      (primary_expression
                        (literal
                          (string)))))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (expression_pattern
              (pattern_expression
                (pattern_primary_expression
                  (record
                    (record_field
                      (identifier)
                      (expression
                        (primary_expression
                          (literal
                            (string)))))
                    (record_field
                      (identifier)
                      (expression
                        (primary_expression
                          (literal
                            (number))))))))))
          (pipeline
            (statement
              (assignment
                (selector
                  (field_selector
                    (identifier)))
                (expression
                  (primary_expression
                    (literal
                      (string))))))))
        (match_arm
          (match_pattern
            (wildcard_pattern)))))))

==================
Pipeline pipe separators around match
==================

from {action: "accept"} | match action { _ => {} } | discard

---

(program
  (pipeline
    (statement
      (invocation
        (entity
          (identifier))
        (arguments
          (argument
            (expression
              (primary_expression
                (record
                  (record_field
                    (identifier)
                    (expression
                      (primary_expression
                        (literal
                          (string))))))))))))
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (wildcard_pattern)))))
    (statement
      (invocation
        (entity
          (identifier))))))

==================
Match guard with parenthesized assignment
==================

match x {
  _ if (a = b) => {}
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (match_arm
          (match_pattern
            (wildcard_pattern))
          (expression
            (primary_expression
              (expression
                (assignment_expression
                  (expression
                    (primary_expression
                      (identifier)))
                  (expression
                    (primary_expression
                      (identifier))))))))))))

==================
Match guard with bare assignment
==================

match x {
  _ if a = b => {}
}

---

(program
  (pipeline
    (statement
      (match_statement
        (expression
          (primary_expression
            (identifier)))
        (ERROR
          (match_pattern
            (wildcard_pattern))
          (expression
            (assignment_expression
              (expression
                (primary_expression
                  (identifier)))
              (expression
                (lambda_expression
                  (identifier)
                  (expression
                    (primary_expression
                      (record))))))))))))
